--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,11 @@
     padding: 0px;
 }
 
+body {
+    width: 700px;
+    margin: auto;
+}
+
 .page-container{
     display: flex;
     justify-content: center;
@@ -66,6 +71,9 @@
     margin-top: 36px;
     margin-bottom: 18px;
     margin-left: 26px;
+    border: 1px solid #D5D4D8;
+    border-radius: 5px;
+    text-indent: 5px;
 }
 
 .meme-btn {
@@ -82,4 +90,6 @@
     text-align: center;
     letter-spacing: -0.1em;
     color: #FFFFFF;
+    border: none;
+    cursor: pointer;
 }
