--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ body {
 .header-container {
     width: 500px;
     height: 65px;
-    background-color: rgba(103, 34, 128, 1);
+    background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
     display: flex;
     justify-content: space-between;
 }
@@ -60,40 +60,72 @@ body {
     color: #FFFFFF;
 }
 
-.meme-container {
-    width: 500px;
-    height: fit-content;
+main {
+    padding: 36px;
 }
 
-.meme-input {
-    width: 205px;
-    height: 35px;
-    margin-top: 36px;
-    margin-bottom: 18px;
-    margin-left: 26px;
-    border: 1px solid #D5D4D8;
+.form {
+    display: grid;
+    grid-template: 40px 40px / 1fr 1fr;
+    gap: 17px;
+    margin-bottom: 17px;
+}
+
+.form--input {
+    font-family: "Karla", sans-serif;
     border-radius: 5px;
+    border: 1px solid #D5D4D8;
     text-indent: 5px;
 }
 
-.meme-btn {
-    width: 445px;
-    height: 40px;
-    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+.form--button {
+    grid-column: 1 / -1;
+    font-family: "Karla", sans-serif;
     border-radius: 5px;
-    margin-left: 26px;
-    font-family: 'Karla';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
-    letter-spacing: -0.1em;
-    color: #FFFFFF;
+    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    color: white;
     border: none;
     cursor: pointer;
 }
 
-.meme-img {
-    width: 100%;
+.meme {
+    position: relative;
+}
+
+.meme--image {
+    max-width: 100%;
+    border-radius: 3px;
+}
+
+.meme--text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
+.bottom {
+    bottom: 0;
+}
+
+.top {
+    top: 0;
 }
